@@ -270,6 +270,7 @@ Major new features:
   - single-precision sincos: sincosf
   - double-precision exp: exp
   - single-precision exp: expf
+  - single-precision pow: powf
 
   GCC support for auto-vectorization of functions on PPC64 is not yet
   available. Until that is done, the new vector math functions are
